--- a/css/index.css
+++ b/css/index.css
@@ -232,8 +232,9 @@ main {
           flex-flow: row wrap;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
-          justify-content: space-between;
+          justify-content: center;
   min-width: 320px;
+  width: 100%;
 }
 
 @media only screen and (max-width: 800px) {
